# colvars_sde

./: Makefile  README.md  colvars-restraints.in  colvars.in  params.cfg  sde.ipynb
benchmark/c++/: main.cpp
benchmark/libtorch/: CMakeLists.txt  example-app.cpp  main.cpp
benchmark/python/: run.py  run_pytorch.py
cmake/: CMakeLists.txt
colvars/src/: Makefile  colvar.cpp  colvar.h  colvaratoms.cpp  colvaratoms.h  colvarbias_meta.cpp  colvarcomp.cpp  colvarcomp.h  colvarcomp_combination.cpp  colvarcomp_distances.cpp  colvarcomp_torchann.cpp  colvardeps.h  colvarmodule.cpp  colvarmodule.h  colvarparse.cpp  colvarparse.h  colvarproxy.cpp  colvarproxy.h  colvarproxy_sde.cpp  colvarproxy_sde.h  colvarproxy_system.h  colvartypes.cpp  colvartypes.h  colvarvalue.cpp  colvarvalue.h  sde_utils.h
examples/stiff_potential_2d/: README.md  analysis.ipynb  colvars-abf-coordinate.in  params.cfg
src/: Makefile  colvar.cpp  colvar.h  colvarcomp.h  colvarcomp_coordinate.cpp  colvarcomp_torchann.cpp  colvarmodule.cpp  colvarmodule_refs.h  colvarparse.cpp  colvarproxy.h  colvarproxy_sde.cpp  colvarvalue.h  main.cpp  potentials.cpp  potentials.h  run.cpp  sde_utils.h
src/backend/: Makefile  main.cpp  potentials.cpp  potentials.h
src/colvars/: Makefile  colvar.cpp  colvar.h  colvarbias.cpp  colvarcomp.h  colvarcomp_empirical.cpp  colvarcomp_torchann.cpp  colvarmodule.h  colvarparse.h  colvarproxy.cpp  colvarproxy_sde.cpp  colvarproxy_sde.h  colvarproxy_system.cpp  colvarproxy_system.h  sde_utils.h
templates/: colvars-abf-coordinate.in  colvars-hist.in  params.cfg  sde.ipynb
(+28 files in other folders)
